# delta

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  bam.lua  configure  configure.ac  euler_method.c  euler_method.h  float_cmp.c  float_cmp.h  libtool  linear_system.c  linear_system.h  make.sh  mathlib.h  mathlib.pc.in  matrix.c  matrix.h  newton_method.c  newton_method.h  runge_kutta4.c  runge_kutta4.h  uvector.c  uvector.h  vector.c  vector.h  vector_function.c  vector_function.h
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  linear_system.h  matrix.h  runge_kutta4.h  vector_function.h
src/impl/: matrix.c  vector_function.c
src/include/: delta.h  vector.h
