AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libmathlib.la
libmathlib_la_SOURCES = matrix.c matrix.h vector.c vector.h uvector.h uvector.c vector_function.c vector_function.h runge_kutta4.c runge_kutta4.h newton_method.c newton_method.h euler_method.c euler_method.h float_cmp.c float_cmp.h linear_system.c linear_system.h
include_HEADERS = mathlib.h
